[package]
name = "rusteriaServer"
version = "0.1.0"
edition = "2024"
[dependencies]
quiche = "*"
log = {version = "*",features = ["kv"]}
env_logger="*"
tokio = { version = "*",features = ["full", "tracing"] }
lib_rusteria = { path = "../libRusteria" }
tokio-quiche="*"
futures = "0.3.31"
bytes = "1.10.1"
clap = "*"

[dev-dependencies]
console-subscriber = "*"

[[bin]]
name = "rusteriaServer"
path = "src/main.rs"
